2.2.1 release (#87)
* Added support for optional eIDAS attributes (#84)
* IS-85 It is now possible to use Spring SSL Bundles to specify TLS trust for metadata providers (#86)